First 2 examples ready. Preparing example 3 blank
