# 03_Contract/WebApiFromTemplate/WeatherForecastController.cs
@@ -3,8 +3,9 @@ using System.Collections.Generic;
 using System.Linq;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
+using NodaTime;
 
-namespace WebApiFromTemplate.Controllers
+namespace WebApiFromTemplate
 {
     [ApiController]
     [Route("[controller]")]
@@ -15,16 +16,28 @@ namespace WebApiFromTemplate.Controllers
             "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching"
         };
 
+        private readonly ILogger<WeatherForecastController> _logger;
+
+        public WeatherForecastController(ILogger<WeatherForecastController> logger)
+        {
+            _logger = logger;
+        }
+
         [HttpGet]
         public IEnumerable<WeatherForecast> Get()
         {
             var rng = new Random();
-            return Enumerable.Range(1, 5).Select(index => new WeatherForecast
-            {
-                Date = DateTime.Now.AddDays(index),
-                TemperatureC = rng.Next(-20, 55),
-                Summary = Summaries[rng.Next(Summaries.Length)]
-            })
+            return Enumerable.Range(1, 5).Select(index =>
+                {
+                    var now = DateTime.Now.AddDays(index);
+
+                    return new WeatherForecast
+                    {
+                        Date = new LocalDate(now.Year, now.Month, now.Day),
+                        TemperatureC = rng.Next(-20, 55),
+                        Summary = Summaries[rng.Next(Summaries.Length)]
+                    };
+                })
             .ToArray();
         }
 
